common, cards e first section layout

--- a/index.html
+++ b/index.html
@@ -5,14 +5,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Responsive layout</title>
 </head>
 
 <body>
     <!-- Header content -->
-    <header></header>
+    <header>
+        <section class="header flex space-between ">
+            <div class="logo">logo</div>
+            <div class="burger">Burger</div>
+        </section>
+    </header>
     <!-- Main content -->
-    <main></main>
+    <main>
+        <!-- info section -->
+        <section class="info flex column gap">
+            <div class="card double-size">
+                <h1>Get a demo application</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto eveniet facilis suscipit quod
+                    ratione sit totam adipisci nemo.</p>
+                <a href="appstore" class="btn">"apple" App Store</a>
+                <img src="https://picsum.photos/200/300" alt="">
+            </div>
+            <div class="card">
+                <div class="fontawesome">
+                    <i class="fa-solid fa-file-code"></i>
+                </div>
+                <h1>Clean Code</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, doloremque aliquam. Dolorem nihil
+                    nesciunt voluptate voluptates.</p>
+            </div>
+            <div class="card">
+                <div class="fontawesome">
+                    <i class="fa-solid fa-file-code"></i>
+                </div>
+                <h1>Clean Code</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, doloremque aliquam. Dolorem nihil
+                    nesciunt voluptate voluptates.</p>
+            </div>
+            <div class="card">
+                <div class="fontawesome">
+                    <i class="fa-solid fa-file-code"></i>
+                </div>
+                <h1>Clean Code</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, doloremque aliquam. Dolorem nihil
+                    nesciunt voluptate voluptates.</p>
+            </div>
+            <div class="card">
+                <div class="fontawesome">
+                    <i class="fa-solid fa-file-code"></i>
+                </div>
+                <h1>Clean Code</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, doloremque aliquam. Dolorem nihil
+                    nesciunt voluptate voluptates.</p>
+            </div>
+        </section>
+        <!-- strategy section -->
+        <section class="strategic flex column gap">
+            <img src="https://picsum.photos/300/300" alt="">
+        </section>
+    </main>
     <!-- Footer content -->
     <footer></footer>
 </body>
