main layout complited

--- a/index.html
+++ b/index.html
@@ -69,6 +69,121 @@
         <!-- strategy section -->
         <section class="strategic flex column gap">
             <img src="https://picsum.photos/300/300" alt="">
+            <h1>Strategic Planning</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi qui
+                iste doloribus distinctio hic earum quos.</p>
+            <div class="card">
+                <img src="https://picsum.photos/250/250" alt="">
+                <h2>App Development</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.</p>
+                <a href="" class="btn-circle">
+                    <i class="fa-solid fa-arrow-down"></i>
+                </a>
+            </div>
+        </section>
+        <!-- testimonial section -->
+        <section class="testimonial flex column gap">
+            <h2>TESTIMONIAL</h2>
+            <h1>We are committed expert partners</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi qui
+                iste doloribus distinctio hic earum quos.</p>
+            <div class="card">
+                <img src="https://picsum.photos/200/200" alt="">
+                <p>
+                    <i class="fa-solid fa-quote-left"></i>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.
+                    <i class="fa-solid fa-quote-right"></i>
+                </p>
+                <h2>NAT REYNOLDS</h2>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/200/200" alt="">
+                <p>
+                    <i class="fa-solid fa-quote-left"></i>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.
+                    <i class="fa-solid fa-quote-right"></i>
+                </p>
+                <h2>NAT REYNOLDS</h2>
+            </div>
+            <div class="card">
+                <img src="https://picsum.photos/200/200" alt="">
+                <p>
+                    <i class="fa-solid fa-quote-left"></i>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.
+                    <i class="fa-solid fa-quote-right"></i>
+                </p>
+                <h2>NAT REYNOLDS</h2>
+            </div>
+        </section>
+        <!-- benefit section -->
+        <section class="benefit flex column gap">
+            <h1>Benefits of working with us</h1>
+            <div class="card">
+                <div class="big-number">01</div>
+                <h2>High Quality</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.</p>
+                <a href="" class="btn">more</a>
+            </div>
+            <div class="card">
+                <div class="big-number">01</div>
+                <h2>High Quality</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.</p>
+                <a href="" class="btn">more</a>
+            </div>
+            <div class="card">
+                <div class="big-number">01</div>
+                <h2>High Quality</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.</p>
+                <a href="" class="btn">more</a>
+            </div>
+        </section>
+        <!-- about section -->
+        <section class="about flex column gap">
+            <h1>About Us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse quos rem aperiam, temporibus
+                adipisci repellat? Magni natus, quasi rem porro autem recusandae, eveniet quas assumenda obcaecati eaque
+                repellat ab.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse quos rem aperiam, temporibus
+                adipisci repellat? Magni natus, quasi rem porro autem recusandae, eveniet quas assumenda obcaecati eaque
+                repellat ab.</p>
+            <div class="img-quatermark">
+                <img src="https://picsum.photos/201/201" alt="">
+                <div class="quatermark">
+                    <i class="fa-solid fa-quote-left"></i>
+                </div>
+            </div>
+            <h2>I help companies dolor sit amet consectetur adipisicing.
+            </h2>
+            <a href="Linkedin" class="btn">
+                <i class="fa-brands fa-linkedin"></i>
+                Find me on linkedin
+            </a>
+        </section>
+        <!-- start section -->
+        <section class="start flex column gap">
+            <h2>GET STARTED</h2>
+            <h1>Simple, Transparent Pricing</h1>
+            <h3>It's Free!</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequatur, repudiandae quaerat in
+                porro laborum.</p>
+            <a href="start" class="btn">Get Started</a>
+            <div class="legal">
+                Copyright 2021 Boolean &#x25CF; Classe XX &#x25CF; <a href="">Privacy policy</a>
+            </div>
         </section>
     </main>
     <!-- Footer content -->
