complited mobile version

--- a/index.html
+++ b/index.html
@@ -187,7 +187,13 @@
         </section>
     </main>
     <!-- Footer content -->
-    <footer></footer>
+    <footer>
+        <section class="footer flex column space-between">
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eos dolor mollitia, doloremque voluptas
+                praesentium.</div>
+            <div class="legal-footer"><a href="">Lorem ipsum</a> dolor sit amet <a href="">Lorem ipsum</a></div>
+        </section>
+    </footer>
 </body>
 
 </html>
