--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h1>Get a demo application</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto eveniet facilis suscipit quod
                     ratione sit totam adipisci nemo.</p>
-                <a href="appstore" class="btn">"apple" App Store</a>
+                <a href="appstore" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
                 <img src="https://picsum.photos/200/300" alt="">
             </div>
             <div class="card">
