--- a/index.html
+++ b/index.html
@@ -25,13 +25,18 @@
     <!-- Main content -->
     <main>
         <!-- info section -->
-        <section class="info flex column gap">
+        <section class="info container space-evenly flex column gap">
             <div class="card double-size">
-                <h1>Get a demo application</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto eveniet facilis suscipit quod
-                    ratione sit totam adipisci nemo.</p>
-                <a href="appstore" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
-                <img src="https://picsum.photos/200/300" alt="">
+                <div class="flex column gap">
+                    <h1>Get a demo application</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto eveniet facilis suscipit
+                        quod
+                        ratione sit totam adipisci nemo.</p>
+                    <a href="appstore" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
+                </div>
+                <div class="flex">
+                    <img src="https://picsum.photos/200/300" alt="">
+                </div>
             </div>
             <div class="card">
                 <div class="fontawesome">
@@ -67,13 +72,16 @@
             </div>
         </section>
         <!-- strategy section -->
-        <section class="strategic flex column gap">
-            <img src="https://picsum.photos/300/300" alt="">
-            <h1>Strategic Planning</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi qui
-                iste doloribus distinctio hic earum quos.</p>
+        <section class="strategic container flex column gap">
+            <div class="flex column gap">
+                <img src="https://picsum.photos/300/200" alt="">
+                <h1>Strategic Planning</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.</p>
+            </div>
             <div class="card">
-                <img src="https://picsum.photos/250/250" alt="">
+                <img src="https://picsum.photos/250/180" alt="">
                 <h2>App Development</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
                     qui
@@ -84,48 +92,81 @@
             </div>
         </section>
         <!-- testimonial section -->
-        <section class="testimonial flex column gap">
+        <section class="testimonial container flex column gap">
             <h2>TESTIMONIAL</h2>
             <h1>We are committed expert partners</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi qui
                 iste doloribus distinctio hic earum quos.</p>
             <div class="card">
                 <img src="https://picsum.photos/200/200" alt="">
-                <p>
-                    <i class="fa-solid fa-quote-left"></i>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.
-                    <i class="fa-solid fa-quote-right"></i>
-                </p>
-                <h2>NAT REYNOLDS</h2>
+                <div class="flex column gap">
+                    <p>
+                        <i class="fa-solid fa-quote-left"></i>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio earum quos.
+                        <i class="fa-solid fa-quote-right"></i>
+                    </p>
+                    <h2>NAT REYNOLDS</h2>
+                </div>
             </div>
             <div class="card">
                 <img src="https://picsum.photos/200/200" alt="">
-                <p>
-                    <i class="fa-solid fa-quote-left"></i>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.
-                    <i class="fa-solid fa-quote-right"></i>
-                </p>
-                <h2>NAT REYNOLDS</h2>
+                <div class="flex column gap">
+                    <p>
+                        <i class="fa-solid fa-quote-left"></i>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio earum quos.
+                        <i class="fa-solid fa-quote-right"></i>
+                    </p>
+                    <h2>NAT REYNOLDS</h2>
+                </div>
             </div>
             <div class="card">
                 <img src="https://picsum.photos/200/200" alt="">
-                <p>
-                    <i class="fa-solid fa-quote-left"></i>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.
-                    <i class="fa-solid fa-quote-right"></i>
-                </p>
-                <h2>NAT REYNOLDS</h2>
+                <div class="flex column gap">
+                    <p>
+                        <i class="fa-solid fa-quote-left"></i>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio earum quos.
+                        <i class="fa-solid fa-quote-right"></i>
+                    </p>
+                    <h2>NAT REYNOLDS</h2>
+                </div>
             </div>
         </section>
         <!-- benefit section -->
-        <section class="benefit flex column gap">
+        <section class="benefit container flex column space-evenly gap">
             <h1>Benefits of working with us</h1>
+            <div class="card">
+                <div class="big-number">01</div>
+                <h2>High Quality</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.</p>
+                <a href="" class="btn">more</a>
+            </div>
+            <div class="card">
+                <div class="big-number">01</div>
+                <h2>High Quality</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.</p>
+                <a href="" class="btn">more</a>
+            </div>
+            <div class="card">
+                <div class="big-number">01</div>
+                <h2>High Quality</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
+                    qui
+                    iste doloribus distinctio hic earum quos.</p>
+                <a href="" class="btn">more</a>
+            </div>
             <div class="card">
                 <div class="big-number">01</div>
                 <h2>High Quality</h2>
@@ -152,29 +193,39 @@
             </div>
         </section>
         <!-- about section -->
-        <section class="about flex column gap">
-            <h1>About Us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse quos rem aperiam, temporibus
-                adipisci repellat? Magni natus, quasi rem porro autem recusandae, eveniet quas assumenda obcaecati eaque
-                repellat ab.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse quos rem aperiam, temporibus
-                adipisci repellat? Magni natus, quasi rem porro autem recusandae, eveniet quas assumenda obcaecati eaque
-                repellat ab.</p>
-            <div class="img-quatermark">
-                <img src="https://picsum.photos/201/201" alt="">
-                <div class="quatermark">
-                    <i class="fa-solid fa-quote-left"></i>
-                </div>
+        <section class="about container flex column gap">
+            <div class="first flex column gap">
+                <h1>About Us</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse quos rem aperiam, temporibus
+                    adipisci repellat? Magni natus, quasi rem porro autem recusandae, eveniet quas assumenda obcaecati
+                    eaque
+                    repellat ab.Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse quos rem aperiam,
+                    temporibus
+                    adipisci repellat? Magni natus, quasi rem porro autem recusandae, eveniet quas assumenda obcaecati
+                    eaque
+                    repellat ab.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid esse quos rem aperiam, temporibus
+                    adipisci repellat? Magni natus, quasi rem porro autem recusandae, eveniet quas assumenda obcaecati
+                    eaque
+                    repellat ab.</p>
             </div>
-            <h2>I help companies dolor sit amet consectetur adipisicing.
-            </h2>
-            <a href="Linkedin" class="btn">
-                <i class="fa-brands fa-linkedin"></i>
-                Find me on linkedin
-            </a>
+            <div class=" second flex column gap">
+                <div class="img-quatermark">
+                    <img src="https://picsum.photos/201/201" alt="">
+                    <div class="quatermark">
+                        <i class="fa-solid fa-quote-left"></i>
+                    </div>
+                </div>
+                <h2>I help companies dolor sit amet consectetur adipisicing.
+                </h2>
+                <a href="Linkedin" class="btn">
+                    <i class="fa-brands fa-linkedin"></i>
+                    Find me on linkedin
+                </a>
+            </div>
         </section>
         <!-- start section -->
-        <section class="start flex column gap">
+        <section class="start container flex column gap">
             <h2>GET STARTED</h2>
             <h1>Simple, Transparent Pricing</h1>
             <h3>It's Free!</h3>
