added images and fixed proportions

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         ratione sit totam adipisci nemo.</p>
                     <a href="appstore" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
                 </div>
-                <div class="flex">
-                    <img src="https://picsum.photos/200/300" alt="">
+                <div class="flex center">
+                    <img src="./img/phone.png" alt="">
                 </div>
             </div>
             <div class="card">
@@ -74,14 +74,14 @@
         <!-- strategy section -->
         <section class="strategic container flex column gap">
             <div class="flex column gap">
-                <img src="https://picsum.photos/300/200" alt="">
+                <img src="./img/planning1.png" alt="">
                 <h1>Strategic Planning</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
                     qui
                     iste doloribus distinctio hic earum quos.</p>
             </div>
             <div class="card">
-                <img src="https://picsum.photos/250/180" alt="">
+                <img src="./img/planning2.png" alt="">
                 <h2>App Development</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
                     qui
@@ -98,7 +98,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi qui
                 iste doloribus distinctio hic earum quos.</p>
             <div class="card">
-                <img src="https://picsum.photos/200/200" alt="">
+                <div class="testimonial-img1"></div>
                 <div class="flex column gap">
                     <p>
                         <i class="fa-solid fa-quote-left"></i>
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://picsum.photos/200/200" alt="">
+                <div class="testimonial-img2"></div>
                 <div class="flex column gap">
                     <p>
                         <i class="fa-solid fa-quote-left"></i>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://picsum.photos/200/200" alt="">
+                <div class="testimonial-img3"></div>
                 <div class="flex column gap">
                     <p>
                         <i class="fa-solid fa-quote-left"></i>
@@ -211,10 +211,12 @@
             </div>
             <div class=" second flex column gap">
                 <div class="img-quatermark">
-                    <img src="https://picsum.photos/201/201" alt="">
-                    <div class="quatermark">
-                        <i class="fa-solid fa-quote-left"></i>
+                    <div class="about-img">
+                        <div class="quatermark">
+                            <i class="fa-solid fa-quote-left"></i>
+                        </div>
                     </div>
+
                 </div>
                 <h2>I help companies dolor sit amet consectetur adipisicing.
                 </h2>
