--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <!-- Header content -->
     <header>
         <section class="header flex space-between ">
-            <div class="logo">logo</div>
-            <div class="burger">Burger</div>
+            <div class="logo"><img src="./img/logo.png" alt=""></div>
+            <div class="burger"><i class="fa-solid fa-bars"></i></div>
         </section>
     </header>
     <!-- Main content -->
@@ -99,7 +99,7 @@
                 iste doloribus distinctio hic earum quos.</p>
             <div class="card">
                 <div class="testimonial-img1"></div>
-                <div class="flex column gap">
+                <div class="flex shrink column gap">
                     <p>
                         <i class="fa-solid fa-quote-left"></i>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
@@ -113,7 +113,7 @@
             </div>
             <div class="card">
                 <div class="testimonial-img2"></div>
-                <div class="flex column gap">
+                <div class="flex shrink column gap">
                     <p>
                         <i class="fa-solid fa-quote-left"></i>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
@@ -127,7 +127,7 @@
             </div>
             <div class="card">
                 <div class="testimonial-img3"></div>
-                <div class="flex column gap">
+                <div class="flex shrink column gap">
                     <p>
                         <i class="fa-solid fa-quote-left"></i>
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
