--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Header content -->
     <header>
-        <section class="header flex space-between ">
+        <section class="header container flex space-between">
             <div class="logo"><img src="./img/logo.png" alt=""></div>
             <div class="burger"><i class="fa-solid fa-bars"></i></div>
         </section>
@@ -25,7 +25,7 @@
     <!-- Main content -->
     <main>
         <!-- info section -->
-        <section class="info container space-evenly flex column gap">
+        <section class="info container flex column gap">
             <div class="card double-size">
                 <div class="flex column gap">
                     <h1>Get a demo application</h1>
@@ -72,23 +72,27 @@
             </div>
         </section>
         <!-- strategy section -->
-        <section class="strategic container flex column gap">
-            <div class="flex column gap">
-                <img src="./img/planning1.png" alt="">
-                <h1>Strategic Planning</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.</p>
-            </div>
-            <div class="card">
-                <img src="./img/planning2.png" alt="">
-                <h2>App Development</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.</p>
-                <a href="" class="btn-circle">
-                    <i class="fa-solid fa-arrow-down"></i>
-                </a>
+        <section class="violet">
+            <div class="strategic container flex column gap">
+                <div class="flex column gap">
+                    <img src="./img/planning1.png" alt="">
+                    <h1>Strategic Planning</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio hic earum quos.</p>
+                </div>
+                <div class="card">
+                    <img src="./img/planning2.png" alt="">
+                    <h2>App Development</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio hic earum quos.</p>
+                    <a href="" class="btn-circle">
+                        <i class="fa-solid fa-arrow-down"></i>
+                    </a>
+                </div>
             </div>
         </section>
         <!-- testimonial section -->
@@ -141,55 +145,63 @@
             </div>
         </section>
         <!-- benefit section -->
-        <section class="benefit container flex column space-evenly gap">
-            <h1>Benefits of working with us</h1>
-            <div class="card">
-                <div class="big-number">01</div>
-                <h2>High Quality</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.</p>
-                <a href="" class="btn">more</a>
-            </div>
-            <div class="card">
-                <div class="big-number">01</div>
-                <h2>High Quality</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.</p>
-                <a href="" class="btn">more</a>
-            </div>
-            <div class="card">
-                <div class="big-number">01</div>
-                <h2>High Quality</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.</p>
-                <a href="" class="btn">more</a>
-            </div>
-            <div class="card">
-                <div class="big-number">01</div>
-                <h2>High Quality</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.</p>
-                <a href="" class="btn">more</a>
-            </div>
-            <div class="card">
-                <div class="big-number">01</div>
-                <h2>High Quality</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.</p>
-                <a href="" class="btn">more</a>
-            </div>
-            <div class="card">
-                <div class="big-number">01</div>
-                <h2>High Quality</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis sequi
-                    qui
-                    iste doloribus distinctio hic earum quos.</p>
-                <a href="" class="btn">more</a>
+        <section class="violet">
+            <div class="benefit container flex column space-evenly gap">
+                <h1>Benefits of working with us</h1>
+                <div class="card">
+                    <div class="big-number">01</div>
+                    <h2>High Quality</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio hic earum quos.</p>
+                    <a href="" class="btn">more</a>
+                </div>
+                <div class="card">
+                    <div class="big-number">01</div>
+                    <h2>High Quality</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio hic earum quos.</p>
+                    <a href="" class="btn">more</a>
+                </div>
+                <div class="card">
+                    <div class="big-number">01</div>
+                    <h2>High Quality</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio hic earum quos.</p>
+                    <a href="" class="btn">more</a>
+                </div>
+                <div class="card">
+                    <div class="big-number">01</div>
+                    <h2>High Quality</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio hic earum quos.</p>
+                    <a href="" class="btn">more</a>
+                </div>
+                <div class="card">
+                    <div class="big-number">01</div>
+                    <h2>High Quality</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio hic earum quos.</p>
+                    <a href="" class="btn">more</a>
+                </div>
+                <div class="card">
+                    <div class="big-number">01</div>
+                    <h2>High Quality</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, impedit ut. Veritatis
+                        sequi
+                        qui
+                        iste doloribus distinctio hic earum quos.</p>
+                    <a href="" class="btn">more</a>
+                </div>
             </div>
         </section>
         <!-- about section -->
@@ -227,15 +239,17 @@
             </div>
         </section>
         <!-- start section -->
-        <section class="start container flex column gap">
-            <h2>GET STARTED</h2>
-            <h1>Simple, Transparent Pricing</h1>
-            <h3>It's Free!</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequatur, repudiandae quaerat in
-                porro laborum.</p>
-            <a href="start" class="btn">Get Started</a>
-            <div class="legal">
-                Copyright 2021 Boolean &#x25CF; Classe XX &#x25CF; <a href="">Privacy policy</a>
+        <section class="violet">
+            <div class="start container flex column gap">
+                <h2>GET STARTED</h2>
+                <h1>Simple, Transparent Pricing</h1>
+                <h3>It's Free!</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequatur, repudiandae quaerat in
+                    porro laborum.</p>
+                <a href="start" class="btn">Get Started</a>
+                <div class="legal">
+                    Copyright 2021 Boolean &#x25CF; Classe XX &#x25CF; <a href="">Privacy policy</a>
+                </div>
             </div>
         </section>
     </main>
