--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         ratione sit totam adipisci nemo.</p>
                     <a href="appstore" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
                 </div>
-                <div class="flex center">
+                <div class="info-img flex center">
                     <img src="./img/phone.png" alt="">
                 </div>
             </div>
@@ -258,7 +258,7 @@
         </section>
         <!-- start section -->
         <section class="violet" id="start">
-            <div class="start container flex column gap">
+            <div class="start container-footer flex column gap">
                 <h2>GET STARTED</h2>
                 <h1>Simple, Transparent Pricing</h1>
                 <h3>It's Free!</h3>
@@ -273,10 +273,13 @@
     </main>
     <!-- Footer content -->
     <footer>
-        <section class="footer flex column space-between">
-            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eos dolor mollitia, doloremque voluptas
-                praesentium.</div>
-            <div class="legal-footer"><a href="">Lorem ipsum</a> dolor sit amet <a href="">Lorem ipsum</a></div>
+        <section class="footer">
+            <div class="container-footer flex column space-between gap">
+                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe eos dolor mollitia, doloremque
+                    voluptas
+                    praesentium.</div>
+                <div class="legal-footer"><a href="">Lorem ipsum</a> dolor sit amet <a href="">Lorem ipsum</a></div>
+            </div>
         </section>
     </footer>
 </body>
